@@ -4,6 +4,7 @@ import com.github.appreciated.vortex_crud.ui_test_base.BaseUITest;
 import com.microsoft.playwright.Locator;
 import com.microsoft.playwright.Mouse;
 import com.microsoft.playwright.options.BoundingBox;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
@@ -116,7 +117,7 @@ public abstract class AbstractKanbanTest extends BaseUITest {
         page.waitForTimeout(1000);
 
         List<Locator> rows = grid.locator("tbody#items tr").all();
-        assertTrue(!rows.isEmpty() && getTaskTitle(grid, rows.get(rows.size() - 1)).contains(text));
+        assertTrue(!rows.isEmpty() && getTaskTitle(grid, rows.getLast()).contains(text));
 
         page.reload();
 
@@ -126,7 +127,7 @@ public abstract class AbstractKanbanTest extends BaseUITest {
         page.waitForTimeout(1000);
 
         List<Locator> refreshedRows = refreshedGrid.locator("tbody#items tr").all();
-        assertTrue(!refreshedRows.isEmpty() && getTaskTitle(refreshedGrid, refreshedRows.get(refreshedRows.size() - 1)).contains(text));
+        assertTrue(!refreshedRows.isEmpty() && getTaskTitle(refreshedGrid, refreshedRows.getLast()).contains(text));
     }
 
     @Test
